--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
-body{
+body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: "";  
-   
+    font-family: ""; 
+    /* background-image: url("imagenes/Group\ 12-2.png") ; */
+    /* background-size: 100%;
+    background-repeat: no-repeat; */
+    background-color: #ddd6f3;
+
 }
 /* Header */
 /* brand-nav */
-
 .after-element{
     color: #B980AF;
 }
@@ -24,40 +27,166 @@ body{
     background-color: #B980AF;
 }
 
-/* Login register button */
-a .login-button {
+/* Login and register button */
+.login-register .btn-login:hover{
+   color: #B980AF;  
+}
+.login-register .btn-login{
+    border:none;
+    font-size: 1.1rem;
+    background-color: transparent;
+    border-radius: 5px; 
+}
+/* register button */
+.login-register .register-button{
+    background-color: #B980AF;
+    font-size: 1.1rem;
+    border: none;
+    border-radius: 5px;
+}
+.login-register .register-button:hover {
+    background-color: #b980aecf;
+    color: black;
+}
+
+/* container */
+.body-image{
+    position:absolute ;
+    width: 100%;
+    height: 125vh;
+}
+
+.info-container{
+    position:relative ;
+    padding: 5%;
+}
+/* image */
+/* 
+.image-fluid{
+    width: 100%;
+    height: 70%;
+}  */
+.title-content {
+    color: white;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+.text-content{
+    font-size: 1.1rem;
+    padding: 5%; 
+}
+/* button section */
+.text-content .btn-section-1{
+    border-radius: 5px ;
+    border-style: none;
+    min-width: 13%;
+    padding: 5px;
+    background-color: transparent;
+    border: white 2px solid;
     color: white;
 }
-a .login-button:hover{
-    color: #B980AF;
-}
-a .register-button{
-    background-color: #B980AF;
-}
-a .register-button:hover{
-    background-color: #B980AF;
+.text-content .btn-section-1:hover{
+    transition: 0.5s;
+    transform:translateY(5%);
     color: black;
+    border: black 2px solid;
+}
+
+.text-content .btn-section-2{
+    background-color: antiquewhite;
+    border-radius: 5px ;
+    border-style: none;
+    min-width: 13%;
+    padding: 5px;
+    box-shadow: 5px  4px 10px 2px black ;
+}
+
+.text-content .btn-section-2:hover{
+    background-color: #B980AF;
+    color: white;
+    transition: 0.5s;
+    transform:translateY(5%);
+}
+/* title and paragraph */
+.title-content .title-section{
+    font-size: 4rem;
+    color: white;
+    
+    /* background: -webkit-linear-gradient(#ffffff 20%, #B980AF 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+}
+.section-paragraph-content{
+    color: black;
+    font-size: 1.5rem;
+}
+
+/* cards */
+.container .card:hover{
+    transform: scale(1.05);
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
+    /* text-shadow: 0 1px 7px rgba(0,0,0,0.6); */
+}
+
+/* Button cards */
+.container .btn-card{
+    border-radius: 5px;
+    border: 0;
+    box-shadow: 0 5px #af9bf9;
+    width: 5rem;
+    background-color: #ddd6f3;
+    color:black;
+}
+.container .btn-card:hover{
+    background-color: #c2b5f1;
+    box-shadow: 0 5px #a58ef7;
+}
+.container .btn-card:active{
+    box-shadow: none;
+    transform: translateY(4px);
 }
 
 /* Main Container and background image */
 
-.body-image{
-    position: absolute;
-    max-width: 100vw;
+/* .image-div {
+    position: relative;
+    max-width: 100%;
     box-sizing: border-box;
-    margin: 0px;
+    margin: 0px ;
     padding: 0px;
     height: 100vh;
     top: 0;
     background-size: cover;
-    /* background-image: url("imagenes/Frame\ 6.png"); */
+    /* background-image: url("imagenes/Frame\ 6.png"); 
     background-position: center;
+}
+@media (min-width:600px) {
+    .body-image{width: 100%}
+    
 }
 @media (min-width:300px) {
     .body-image{width: 100%}
-}
-.container{
-    position: relative;
-    width: 100vw;
+    .navbar{width: 100vw;}
     
 }
+ .container{
+    position: absolute;
+    width: 100vw;
+    
+} */
+
+/* Estilo para el contenedor principal 
+ .image-div {
+    height: 100%; /* Establece la altura del contenedor al 100% de la altura de la ventana gráfica
+   
+  }
+  
+  
+  .body-image {
+    max-height: 100%; 
+    max-width: 100%; 
+    height: 100vh; 
+    width: 100vw; 
+  } */
+  
